# AIReporting

./: .env.example  .env.test  .gitignore  LICENSE  README.md  ai_function.py  app.py  dev.dockerfile  docker-compose.yml  dockerfile  main.py  prompts.yaml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  scratchpad.py
.github/workflows/: proddeploy.yml
app/: main.py
app/config/: database.py  dynamodb.py  prompts.yaml  redis.py  settings.py
app/core/: dependencies.py  exceptions.py  utils.py
app/models/: __init__.py  ai_request.py  ai_response.py  chat.py  chat_session.py  data_source.py  message.py  user.py  user_profile.py  user_social_conn.py
app/repositories/: chat.py  chat_session.py  data_source.py  message.py  user.py
app/routes/: ai_route.py  auth.py  chat.py  chat_route.py  chat_session.py  data_source.py  data_source_update.py  user.py
app/schemas/: ai_request.py  ai_response.py  auth.py  chat.py  chat_session.py  data_source.py  data_source_update.py  enum.py  message.py  user.py
app/services/: ai_function.py  ai_service.py  chat.py  chat_service.py  chat_session.py  (+9 more)
db_files/: db_agent.py  db_file.py  inventory.csv  products.csv  sales.csv
docker/: dockerfile
migrations/: env.py
scratchpad/: connection_pool_manager.py  data_source_route.py  data_source_service.py  data_source_update_service.py  distributed_lock_manager.py  enhanced_temp_data_service.py  pad1.py  streaming_file_service.py  transaction_manager.py  validation_middleware.py
terraform/: main.tf  outputs.tf  readme.md  terraform.tfvars.example  variables.tf
(+92 files in other folders)
