[project]
name = "aireporting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "boto3>=1.39.14",
    "fastapi[standard]>=0.116.1",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pynamodb>=6.1.0",
    "redis>=6.2.0",
    "sendgrid>=6.12.4",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "factory-boy>=3.3.3",
    "faker>=37.4.2",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.8.0",
]
